change nav to fixed top
Signed-off-by: WEN Pingbo <wengpingbo@gmail.com>

--- a/asciidoc/simple.conf
+++ b/asciidoc/simple.conf
@@ -7,7 +7,7 @@
 
 [miscellaneous]
 outfilesuffix=.html
-blogroot=http://172.16.11.220:8080
+blogroot=http://192.168.1.109
 toc=
 
 [attributes]
@@ -577,7 +577,7 @@ endif::latexmath[]
 </head>
 <body class="{doctype}"{max-width? style="max-width:{max-width}"}{css-signature? id="{css-signature}"} data-spy="scroll" data-target="#article_nav">
 # custom for simple blog, add nav
-<div id="nav"></div>
+<div id="blognav"></div>
 
 <div class="container">
 <div class="row-fluid">
@@ -616,7 +616,7 @@ template::[footer-text]
 <script src="http://code.jquery.com/jquery.js"></script>
 <script src="{blogroot}/js/bootstrap.min.js"></script>
 <script>
-$("#nav").load("{blogroot}/core/nav.inc");
+$("#blognav").load("core/nav.inc");
 </script>
 </body>
 </html>
