reshape header style, add bg.gif
Signed-off-by: WEN Pingbo <wengpingbo@gmail.com>

--- a/asciidoc/simple.conf
+++ b/asciidoc/simple.conf
@@ -578,6 +578,19 @@ endif::latexmath[]
 <body class="{doctype}"{max-width? style="max-width:{max-width}"}{css-signature? id="{css-signature}"} data-spy="scroll" data-target="#article_nav">
 # custom for simple blog, add nav
 <div id="blognav"></div>
+# Article, book header.
+<div id="header_bg" class="container-fluid">
+<div id="header" class="container">
+ifndef::notitle[<h1>{doctitle}</h1>]
+ifdef::doctitle[]
+<span id="author">{author}</span><br>
+<span id="email" class="monospaced">&lt;<a href="mailto:{email}">{email}</a>&gt;</span><br>
+<span id="revnumber">version {revnumber}{revdate?,}</span>
+<span id="revdate">{revdate}</span>
+<br><span id="revremark">{revremark}</span>
+endif::doctitle[]
+</div>
+</div>
 
 <div class="container">
 <div class="row-fluid">
@@ -588,17 +601,6 @@ endif::latexmath[]
 <div id="article_commnet" class="row-fluid"> Comment </div>
 </div>
 <div class="span9" id="content">
-# Article, book header.
-<div id="header">
-ifndef::notitle[<h1>{doctitle}</h1>]
-ifdef::doctitle[]
-<span id="author">{author}</span><br>
-<span id="email" class="monospaced">&lt;<a href="mailto:{email}">{email}</a>&gt;</span><br>
-<span id="revnumber">version {revnumber}{revdate?,}</span>
-<span id="revdate">{revdate}</span>
-<br><span id="revremark">{revremark}</span>
-endif::doctitle[]
-</div>
 
 [footer]
 </div> 
