change footnote style
Signed-off-by: WEN Pingbo <wengpingbo@gmail.com>

--- a/asciidoc/simple.conf
+++ b/asciidoc/simple.conf
@@ -134,13 +134,13 @@ template::[toc]
 
 [footnote-inlinemacro]
 # footnote:[<text>].
-<span class="footnote span9 pull-right"><br>[{0}]<br></span>
+<span class="footnote"><br>[{0}]<br></span>
 
 [footnoteref-inlinemacro]
 # footnoteref:[<id>], create reference to footnote.
-{2%}<span class="footnoteref span9 pull-right"><br><a href="#_footnote_{1}">[{1}]</a><br></span>
+{2%}<span class="footnoteref"><br><a href="#_footnote_{1}">[{1}]</a><br></span>
 # footnoteref:[<id>,<text>], create footnote with ID.
-{2#}<span class="footnote span9 pull-right" id="_footnote_{1}"><br>[{2}]<br></span>
+{2#}<span class="footnote" id="_footnote_{1}"><br>[{2}]<br></span>
 
 [callout-inlinemacro]
 ifndef::icons[]
@@ -604,7 +604,7 @@ endif::doctitle[]
 
 [footer]
 </div> 
-{disable-javascript%<div id="footnotes"><hr></div>}
+{disable-javascript%<div id="footnotes" class="span9 pull-right"><hr></div>}
 </div> <!-- span9 content -->
 </div> <!-- row-fluid -->
 </div> <!-- container -->
