--- a/asciidoc/simple.conf
+++ b/asciidoc/simple.conf
@@ -529,7 +529,7 @@ bodydata=<td class="tableblock halign-{colalign=left}">|</td>
 </div>
 
 [toc]
-<ul id="toc" class="nav nav-list" data-spy="affix" data-offset-top="200">
+<ul id="toc" class="nav nav-list bs-docs-sidenav" data-spy="affix" data-offset-top="200">
   <li id="toctitle" class="nav-header">{toc-title}</li>
   <noscript><p><b>JavaScript must be enabled in your browser to display the table of contents.</b></p></noscript>
 </ul>
