add comment plugin in article page
Signed-off-by: WEN Pingbo <wengpingbo@gmail.com>

--- a/asciidoc/simple.conf
+++ b/asciidoc/simple.conf
@@ -598,7 +598,7 @@ endif::doctitle[]
 <div id="article_nav" class="row-fluid"> 
 {toc,toc2#}{toc-placement$auto:}{template:toc}
 </div>
-<div id="article_commnet" class="row-fluid"> Comment </div>
+<div id="article_commnet" class="row-fluid"></div>
 </div>
 <div class="span9" id="content">
 
