using blog.js in article page
Signed-off-by: WEN Pingbo <wengpingbo@gmail.com>

--- a/asciidoc/simple.conf
+++ b/asciidoc/simple.conf
@@ -609,17 +609,13 @@ endif::doctitle[]
 </div> <!-- row-fluid -->
 </div> <!-- container -->
 
-<div id="footer" class="container">
-<div id="footer-text" class="pull-right">
-Created by Pingbo Wen, all rights reserved. <br />
+<div id="footer_hook" class="container pull-right">
 template::[footer-text]
-</div>
+<br />
 </div>
 <script src="http://code.jquery.com/jquery.js"></script>
 <script src="{blogroot}/js/bootstrap.min.js"></script>
-<script>
-$("#blognav").load("core/nav.inc");
-</script>
+<script src="{blogroot}/js/blog.js"></script>
 </body>
 </html>
 
