change nav hook in article page
Signed-off-by: WEN Pingbo <wengpingbo@gmail.com>

--- a/asciidoc/simple.conf
+++ b/asciidoc/simple.conf
@@ -577,7 +577,11 @@ endif::latexmath[]
 </head>
 <body class="{doctype}"{max-width? style="max-width:{max-width}"}{css-signature? id="{css-signature}"} data-spy="scroll" data-target="#article_nav">
 # custom for simple blog, add nav
-<div id="blognav"></div>
+<div id="nav_hook">
+	  <noscript>
+		<p><b>JavaScript must be enabled in your browser 
+		  to display nav bar contents.</b></p></noscript>
+</div>
 # Article, book header.
 <div id="header_bg" class="container-fluid">
 <div id="header" class="container">
