pull-right footer in article page
Signed-off-by: WEN Pingbo <wengpingbo@gmail.com>

--- a/asciidoc/simple.conf
+++ b/asciidoc/simple.conf
@@ -613,9 +613,11 @@ endif::doctitle[]
 </div> <!-- row-fluid -->
 </div> <!-- container -->
 
-<div id="footer_hook" class="container pull-right">
+<div id="footer_hook" class="container">
+<div id="footer-text" class="pull-right">
 template::[footer-text]
 <br />
+</div>
 </div>
 <script src="http://code.jquery.com/jquery.js"></script>
 <script src="{blogroot}/js/bootstrap.min.js"></script>
