change footer-text to footer_text
Signed-off-by: WEN Pingbo <wengpingbo@gmail.com>

--- a/asciidoc/simple.conf
+++ b/asciidoc/simple.conf
@@ -614,7 +614,7 @@ endif::doctitle[]
 </div> <!-- container -->
 
 <div id="footer_hook" class="container">
-<div id="footer-text" class="pull-right">
+<div id="footer_text" class="pull-right">
 template::[footer-text]
 <br />
 </div>
