change comment plugin width
Signed-off-by: WEN Pingbo <wengpingbo@gmail.com>

--- a/asciidoc/simple.conf
+++ b/asciidoc/simple.conf
@@ -606,10 +606,9 @@ endif::doctitle[]
 <div class="span9" id="content">
 
 [footer]
-</div> 
-{disable-javascript%<div id="footnotes" class="span9 pull-right"><hr></div>}
-<div id="article_comment" class="row-fluid"></div>
 </div> <!-- span9 content -->
+{disable-javascript%<div id="footnotes" class="span9 pull-right"><hr></div>}
+<div id="article_comment" class="span9 pull-right"></div>
 </div> <!-- row-fluid -->
 </div> <!-- container -->
 
