--- a/asciidoc/simple.conf
+++ b/asciidoc/simple.conf
@@ -549,7 +549,8 @@ bodydata=<td class="tableblock halign-{colalign=left}">|</td>
 <title>{title}</title>
 {title%}<title>{doctitle=}</title>
 <link href="{blogroot}/css/bootstrap.min.css" rel="stylesheet" media="screen">
-<link href="{blogroot}/css/main.css" rel="stylesheet">
+<link href="{blogroot}/css/global.css" rel="stylesheet">
+<link href="{blogroot}/css/article.css" rel="stylesheet">
 ifeval::["{source-highlighter}"=="pygments"]
 <link rel="stylesheet" href="{blogroot}/css/pygments.css" type="text/css">
 endif::[]
