--- a/asciidoc/simple.conf
+++ b/asciidoc/simple.conf
@@ -10,6 +10,7 @@ include::{asciidoc-confdir}/html5.conf[]
 [miscellaneous]
 outfilesuffix=.html
 blogroot=http://202.201.0.164/blog
+blogtitle="Pingbo Wen's Blog"
 toc=
 
 [toc]
@@ -30,8 +31,8 @@ toc=
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title>{title}</title>
-{title%}<title>{doctitle=}</title>
+<title>{title} - {blogtitle}</title>
+{title%}<title>{doctitle=} - {blogtitle}</title>
 <link href="{blogroot}/css/bootstrap.min.css" rel="stylesheet" media="screen">
 <link href="{blogroot}/css/global.css" rel="stylesheet">
 <link href="{blogroot}/css/article.css" rel="stylesheet">
