add install.py script, change config.yaml
Signed-off-by: WEN Pingbo <wengpingbo@gmail.com>

--- a/asciidoc/simple.conf
+++ b/asciidoc/simple.conf
@@ -10,7 +10,7 @@ include::{asciidoc-confdir}/html5.conf[]
 [miscellaneous]
 outfilesuffix=.html
 blogroot=http://202.201.0.164/blog
-blogtitle="Pingbo Wen's Blog"
+blogtitle=Pingbo Wen's Blog
 toc=
 
 [toc]
