add post list title at first line in every article html file change post list array structure modify asciidoc backend to auto-generate post list title in final html file
Signed-off-by: WEN Pingbo <wengpingbo@gmail.com>

--- a/local/asciidoc/simple.conf
+++ b/local/asciidoc/simple.conf
@@ -9,6 +9,7 @@ include::{asciidoc-confdir}/html5.conf[]
 
 [miscellaneous]
 outfilesuffix=.html
+newline=\n
 blogroot=http://202.201.0.164/blog
 blogtitle=Pingbo Wen's Blog
 toc=
@@ -20,6 +21,7 @@ toc=
 </ul>
 
 [header]
+<!--{listtitle={doctitle}}-->
 <!DOCTYPE html>
 <html lang="{lang=en}">
 <head>
