expand article comment width in small backend
Signed-off-by: WEN Pingbo <wengpingbo@gmail.com>

--- a/local/asciidoc/small.conf
+++ b/local/asciidoc/small.conf
@@ -1,5 +1,5 @@
 #
-# simple.conf
+# small.conf
 #
 # nakedBug blog  configuration file.
 # inherit html5 backend.
@@ -76,7 +76,7 @@ endif::doctitle[]
 
 [footer]
 {disable-javascript%<div id="footnotes" class="span9 pull-right"><hr></div>}
-<div id="article_comment" class="span9 pull-right"></div>
+<div id="article_comment"></div>
 </div> <!-- row-fluid -->
 </div> <!-- container -->
 
