--- a/local/asciidoc/simple.conf
+++ b/local/asciidoc/simple.conf
@@ -36,6 +36,7 @@ toc=
 <title>{title} - {blogtitle}</title>
 {title%}<title>{doctitle=} - {blogtitle}</title>
 <link href="{blogroot}/css/bootstrap.min.css" rel="stylesheet" media="screen">
+<link href="{blogroot}/css/asciidoc.css" rel="stylesheet">
 <link href="{blogroot}/css/global.css" rel="stylesheet">
 <link href="{blogroot}/css/article.css" rel="stylesheet">
 ifeval::["{source-highlighter}"=="pygments"]
