--- a/local/asciidoc/small.conf
+++ b/local/asciidoc/small.conf
@@ -30,6 +30,7 @@ toc=
 <title>{title} - {blogtitle}</title>
 {title%}<title>{doctitle=} - {blogtitle}</title>
 <link href="{blogroot}/css/bootstrap.min.css" rel="stylesheet" media="screen">
+<link href="{blogroot}/css/asciidoc.css" rel="stylesheet">
 <link href="{blogroot}/css/global.css" rel="stylesheet">
 <link href="{blogroot}/css/article.css" rel="stylesheet">
 ifeval::["{source-highlighter}"=="pygments"]
@@ -40,6 +41,13 @@ endif::[]
 ifdef::pygments[<link rel="stylesheet" href="{blogroot}/css/pygments.css" type="text/css">]
 
 <script type="text/javascript" src="{blogroot}/js/asciidoc.js"></script>
+<script type="text/javascript">
+#TODO: Escape not necessary in HTML5?
+# Escape as CDATA to pass validators.
+/*<![CDATA[*/
+asciidoc.install();
+/*]]>*/
+</script>
 
 ifdef::asciimath[]
 <script type="text/javascript" src="{blogroot}/ASCIIMathML.js"></script>
@@ -75,7 +83,7 @@ endif::doctitle[]
 <div class="row-fluid" id="content">
 
 [footer]
-{disable-javascript%<div id="footnotes" class="span9 pull-right"><hr></div>}
+{disable-javascript%<div id="footnotes"><hr></div>}
 <div id="article_comment"></div>
 </div> <!-- row-fluid -->
 </div> <!-- container -->
